# LT4C-fix-bug

./: .dockerignore  .gitignore  CERTIFICATE.md  Dockerfile  LICENSE  README.md  render.yaml
backend/: .env  .env.example  3.1  API_USAGE_GUIDE.md  Dockerfile  README.md  TODO.md  UPGRADE.md  WORKER_SYSTEM_SUMMARY.md  Workers_Docs.md  _rewrite_vps_block.py  alembic.ini  check_session.py  create_test_data_docker.py  create_test_user.py  debug_neon.py  debug_workers.py  docker-compose.worker.yml  docker-compose.yml  frontend.md  list_workers.py  print_workers_block.py  pyproject.toml  register_local_worker.py  requirements.txt  revoke_admins.py  seed_workers.py  setup_specific_admin.py  simple_seed.py  temp_admin_schemas.py  temp_support_api.py  temp_support_service.py  temp_types.txt  test_imports.py
backend/alembic/: env.py
backend/alembic/versions/: 20251001_create_users.py  20251002_admin_rbac.py  20251004_vps_platform.py  20251005_vps_route.py  20251005_worker_system.py  (+9 more)
backend/app/: auth.py  db.py  deps.py  main.py  metrics.py  models.py  schemas.py  settings.py  utils.py
backend/docs/: Mapping.md  RBAC.md  ci_cd.md
backend/generate_vps/: 2z2.py  README.md  check_and_install.py  code.json  dashboard.html  index.html  linux.py  quack_2o20d.txt  quack_6vh5c.txt  quack_9iidg.txt  quack_b1al7.txt  quack_eqkk5.txt  quack_ghq7o.txt  quack_hmakv.txt  quack_raefk.txt  quack_w4de1.txt  quack_xq1dq.txt  requirements.txt  run_server.py  server.py  win10.py
backend/scripts/: check_models.py  debug_startup.py
backend/tests/: conftest.py  test_admin.py  test_services.py  test_settings.py
(+130 files in other folders)
