[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lifetech4code-api"
version = "0.1.0"
description = "FastAPI application for LifeTech4Code platform"
readme = "README.md"
authors = [{ name = "Codex" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.95,<0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27,<0.28",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "python-dotenv>=1.0",
    "itsdangerous>=2.2",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.2",
    "cryptography>=42.0.0",
    "openai>=1.37.0",
    "email-validator>=2.1",
    "redis[hiredis]>=5.0",
    "prometheus-client>=0.20",
    "pyjwt[crypto]>=2.9",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://example.com"

[tool.setuptools.packages.find]
where = ["."]
include = ["app"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "Q", "I", "UP", "ASYNC"]
ignore = []
exclude = ["alembic/versions"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
plugins = []
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = true
exclude = ["alembic/versions"]
